[Add] GetCampaignDetails API
